--- a/index.html
+++ b/index.html
@@ -7,11 +7,44 @@
 </head>
 <body>
     <div class="header">
-
+        <h1>Header Logo</h1>
+        <a href="" target="blank" class="header-links">header link one</a>
+        <a href="" target="blank" class="header-links">header link two</a>
+        <a href="" target="blank" class="header-links">header link three</a>
     </div>
-    <div class=""
+    <div class="top">
+        <h2>This website is awesome</h2>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <img src="" alt="this is a placeholder for an image">
+        <button id="top-signup">Sign up</button>
+    </div>
+    <div class="row">
+        <h3>Some random information.</h3>
+        <div>
+            <img src="" alt="">
+            <p>this is some subtext under and illustration or image</p>
+            <img src="" alt="">
+            <p>this is some subtext under and illustration or image</p>
+            <img src="" alt="">
+            <p>this is some subtext under and illustration or image</p>
+            <img src="" alt="">
+            <p>this is some subtext under and illustration or image</p>
+        </div>
+        
+    </div>
+    <div class="quote">
+        <p>This is and inspiring quote, or a testimonial from a customer.Maybe it's just filling up space,or maybe people will acually read it.Who knows?All I know is that it looks nice.</p>
+        <p id="quoting">-Thor,God of Thunder</p>
+    </div>
+    <div class="sign-up">
+        <h4>Call to action!It's time!</h4>
+        <P>Sign up for our product by clicking that button right onver there!</P>
+        <button id="bottom-signup">Sign up</button>
+    </div>
     <div class="footer">
-
+        <footer>
+            <P>Copyright &copy; The Odin Project 2021</P>
+        </footer>
     </div>
 </body>
 
