--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="top-section">
     <div class="header">
         <h1>Header Logo</h1>
         <a href="" target="blank" class="header-links">header link one</a>
@@ -14,9 +15,10 @@
     </div>
     <div class="top">
         <h2>This website is awesome</h2>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <p class="top-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <img src="" alt="this is a placeholder for an image">
         <button id="top-signup">Sign up</button>
+    </div>
     </div>
     <div class="row">
         <h3>Some random information.</h3>
