--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div class="row">
         <h3>Some random information.</h3>
         <div>
-            <img src="" alt="">
+            <img src="img/cat1.jpg" alt="cat image">
             <p>this is some subtext under and illustration or image</p>
-            <img src="" alt="">
+            <img src="img/cat2.jpg" alt="cat image">
             <p>this is some subtext under and illustration or image</p>
-            <img src="" alt="">
+            <img src="img/cat3.jpg" alt="cat image">
             <p>this is some subtext under and illustration or image</p>
-            <img src="" alt="">
+            <img src="img/cat4.jpg" alt="cat image">
             <p>this is some subtext under and illustration or image</p>
         </div>
         
