--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
-<body>
+<body class="body">
     <div class="top-section">
     <div class="header">
         <h1>Header Logo</h1>
@@ -16,21 +16,21 @@
     <div class="top">
         <h2>This website is awesome</h2>
         <p class="top-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <img src="" alt="this is a placeholder for an image">
+        <img src="img/cat-top.jpg" alt="this is a placeholder for an image" id="top-img">
         <button id="top-signup">Sign up</button>
     </div>
     </div>
-    <div class="row">
+    <div id="row">
         <h3>Some random information.</h3>
         <div>
-            <img src="img/cat1.jpg" alt="cat image">
-            <p>this is some subtext under and illustration or image</p>
-            <img src="img/cat2.jpg" alt="cat image">
-            <p>this is some subtext under and illustration or image</p>
-            <img src="img/cat3.jpg" alt="cat image">
-            <p>this is some subtext under and illustration or image</p>
-            <img src="img/cat4.jpg" alt="cat image">
-            <p>this is some subtext under and illustration or image</p>
+            <img src="img/cat1.jpg" alt="cat image" class="images">
+            <img src="img/cat2.jpg" alt="cat image" class="images">
+            <img src="img/cat3.jpg" alt="cat image" class="images">
+            <img src="img/cat4.jpg" alt="cat image" class="images">
+            <p id="row-text">this is some subtext under and illustration or image</p>
+            <p id="row-text">this is some subtext under and illustration or image</p>
+            <p id="row-text">this is some subtext under and illustration or image</p>
+            <p id="row-text">this is some subtext under and illustration or image</p>
         </div>
         
     </div>
