--- a/index.html
+++ b/index.html
@@ -23,14 +23,23 @@
     <div id="row">
         <h3>Some random information.</h3>
         <div>
-            <img src="img/cat1.jpg" alt="cat image" class="images">
-            <img src="img/cat2.jpg" alt="cat image" class="images">
-            <img src="img/cat3.jpg" alt="cat image" class="images">
-            <img src="img/cat4.jpg" alt="cat image" class="images">
-            <p id="row-text">this is some subtext under and illustration or image</p>
-            <p id="row-text">this is some subtext under and illustration or image</p>
-            <p id="row-text">this is some subtext under and illustration or image</p>
-            <p id="row-text">this is some subtext under and illustration or image</p>
+            <div>
+                <img src="img/cat1.jpg" alt="cat image" class="images">
+                <p class="row-text">this is some subtext under and illustration or image</p>
+            </div>
+            <div>
+                <img src="img/cat2.jpg" alt="cat image" class="images">
+                <p class="row-text">this is some subtext under and illustration or image</p>
+            </div>
+            <div>
+                <img src="img/cat3.jpg" alt="cat image" class="images">
+                <p class="row-text">this is some subtext under and illustration or image</p>
+            </div>
+            <div>
+                <img src="img/cat4.jpg" alt="cat image" class="images">
+                <p class="row-text">this is some subtext under and illustration or image</p>
+            </div>
+            
         </div>
         
     </div>
