--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
     </div>
     <div class="quote">
-        <p>This is and inspiring quote, or a testimonial from a customer.Maybe it's just filling up space,or maybe people will acually read it.Who knows?All I know is that it looks nice.</p>
+        <p id="quote-text">This is and inspiring quote, or a testimonial from a customer.Maybe it's just filling up space,or maybe people will acually read it.Who knows?All I know is that it looks nice.</p>
         <p id="quoting">-Thor,God of Thunder</p>
     </div>
     <div class="sign-up">
@@ -52,7 +52,7 @@
     </div>
     <div class="footer">
         <footer>
-            <P>Copyright &copy; The Odin Project 2021</P>
+            <P id="footer-text">Copyright &copy; The Odin Project 2021</P>
         </footer>
     </div>
 </body>
